# ALSTracker

./: .gitignore  README.md  gunicorn_start.sh  pyproject.toml
src/ALSTracker/: alstracker.py
src/ALSTracker/doc/: details.md  instructions.md
src/ALSTracker/doc/other/: database_simulated.xlsx  database_template.xlsx
src/ALSTracker/templates/: index.html
